[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazylines"
version = "0.0.4"
description = "A lazy way to process lines from files"
authors = [
    {name = "Vincent D. Warmerdam"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "srsly>=2.0.8",
    "tqdm>=4.64.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=5.4.3",
    "mktestdocs>=0.1.0",
    "interrogate>=1.2.0",
    "mkdocs-material",
    "mkdocstrings-python",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["lazylines", "lazylines.*"]

[tool.ruff]
line-length = 125
target-version = "py38"

[tool.ruff.lint]
# Enable flake8 rules along with other useful ones
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
